--- a/README.adoc
+++ b/README.adoc
@@ -19,14 +19,14 @@ docker compose exec -it flink ./bin/sql-client.sh
 
 [source,sql]
 ----
-CREATE CATALOG c_iceberg_jdbc WITH (
-   'type' = 'iceberg',
-   'io-impl' = 'org.apache.iceberg.aws.s3.S3FileIO',
-   'warehouse' = 's3://warehouse',
-   's3.endpoint' = 'http://minio:9000',
-   's3.path-style-access' = 'true',
-   'catalog-impl' = 'org.apache.iceberg.jdbc.JdbcCatalog',
-   'uri' ='jdbc:postgresql://postgres:5432/world-db?user=world&password=world123');
+CREATE CATALOG c_iceberg_jdbc WITH ( 
+   'type' = 'iceberg', 
+   'io-impl' = 'org.apache.iceberg.aws.s3.S3FileIO', 
+   'warehouse' = 's3://warehouse', 
+   's3.endpoint' = 'http://minio:9000', 
+   's3.path-style-access' = 'true', 
+   'catalog-impl' = 'org.apache.iceberg.jdbc.JdbcCatalog', 
+   'uri' ='jdbc:postgresql://postgres:5432/?user=dba&password=rules');
 
 CREATE DATABASE `c_iceberg_jdbc`.`db01`;
 
